--- a/App.Clinic/Views/PatientManagement.xaml
+++ b/App.Clinic/Views/PatientManagement.xaml
@@ -4,9 +4,9 @@
              x:Class="App.Clinic.Views.PatientManagement"
              Title="PatientManagement">
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+        <ListView
+               ItemsSource = "{Binding Patients}" 
+        ></ListView>
+        <Button Text="Cancel" Clicked="CancelClicked"/>
     </VerticalStackLayout>
 </ContentPage>
