--- a/App.Clinic/Views/PatientManagement.xaml
+++ b/App.Clinic/Views/PatientManagement.xaml
@@ -3,13 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="App.Clinic.Views.PatientManagement"
              Title="PatientManagement"
-             NavigatedTo="PatientManagement_NavigatedTo">
-    
+             NavigatedTo="PatientManagement_NavigatedTo"
+             >
     <VerticalStackLayout>
         <ListView
-               ItemsSource = "{Binding Patients}" 
-        ></ListView>
-        <Button Text="Cancel" Clicked="CancelClicked"/>
-        <Button Text="Add" Clicked="AddClicked" />
+            ItemsSource="{Binding Patients}"
+            SelectedItem="{Binding SelectedPatient}"
+            ></ListView>
+        <Button Text="Add" Clicked="AddClicked"/>
+        <Button Text="Delete" Clicked="DeleteClicked"/>
+        <Button Text="Cancel" Clicked="CancelClicked" />
     </VerticalStackLayout>
 </ContentPage>
