not exactly fixed ( but works so im saving just in case what i do next breaks it)
issues:
1) does not update when added physician
2) edit physician wonky
3) PHYSICIAN IN GENERAL IS SUPER WONKY

--- a/App.Clinic/AppShell.xaml
+++ b/App.Clinic/AppShell.xaml
@@ -1,26 +1,45 @@
-<?xml version="1.0" encoding="UTF-8" ?>
-<Shell
-    x:Class="App.Clinic.AppShell"
+<?xml version="1.0" encoding="utf-8" ?>
+<Shell  x:Class="App.Clinic.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:App.Clinic"
     xmlns:views="clr-namespace:App.Clinic.Views"
-    Shell.FlyoutBehavior="Disabled"
     Title="App.Clinic">
-
+    
+    
     <ShellContent
         Title="Home"
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
-    <ShellContent
-    Title="Manage Patient"
-    ContentTemplate="{DataTemplate views:PatientManagement}"
-    Route="Patients" />
-    <ShellContent
-    Title="Patient Details"
-    ContentTemplate="{DataTemplate views:PatientView}"
-    Route="PatientDetails" />
 
+    <ShellContent
+        Title="Patients"
+        ContentTemplate="{DataTemplate views:PatientManagement}"
+        Route="Patients" />
 
+    <ShellContent
+        Title="Patient Details"
+        ContentTemplate="{DataTemplate views:PatientView}"
+        Route="PatientDetails" />
+
+    <ShellContent
+        Title="Physicians"
+        ContentTemplate="{DataTemplate views:PhysicianManagementView}"
+        Route="Physicians" />
+
+    <ShellContent
+        Title="Physician Details"
+        ContentTemplate="{DataTemplate views:PhysicianView}"
+        Route="PhysicianDetails" />
+
+    <ShellContent
+        Title="Appointments"
+        ContentTemplate="{DataTemplate views:AppointmentManagementView}"
+        Route="Appointments" />
+
+    <ShellContent
+        Title="Appointment Details"
+        ContentTemplate="{DataTemplate views:AppointmentView}"
+        Route="AppointmentDetails" />
 
 </Shell>
